fix event page center align

--- a/themes/navhub-v2/static/css/sass/homepage/get_started.scss
+++ b/themes/navhub-v2/static/css/sass/homepage/get_started.scss
@@ -30,6 +30,8 @@
     margin-bottom: 25px;
     width: 90vw;
     max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     .grid-item {
       display: flex;
       flex-direction: column;
